# pg-listener-py

./: Dockerfile  Jenkinsfile  Makefile  README.md  config.yml  env.example  main.py  pyproject.toml  requirements.txt
.concepts/: jenkins-multibranch-pipeline.xml  openshift-template.yml
.openshift/: Jenkinsfile  pg-listener-py-multibranch-pipeline.xml
